# viewerTemplates

./: README.md
normalFinder/: mainpage.dox  manifest.xml
normalFinder/src/: fancyViewer.cpp  fancyWindow.cpp  main.cpp
standardViewer/: CMakeLists.txt
standardViewer/src/: fancyViewer.h  fancyWindow.h  fancyWindow.ui
